--- a/README
+++ b/README
@@ -1,1 +1,54 @@
-This is editable.
+############################
+#     1. Introduction      #
+############################
+
+ Name: CAE SPlayer Plugin v1.0.0
+ Description: Stream player with extensive syncronization capabilities
+ Lincencing         -> LICENCE
+ Installation notes -> INSTALL
+ Changelog          -> CHANGELOG
+
+############################
+#       2. Libraries       #
+############################
+
+ Firebreath 
+ FFmpeg
+ OPENGL
+
+############################
+#        3. Credits        #
+############################
+
+ Máté Koch
+ Attila Ötvös
+
+                                                                               
+                                                             #                   
+                                                       ######                   
+                                                   #########                    
+                                              #############                     
+                                         ##################                     
+                                     #####################                      
+                                 ########################                       
+                            #############################                       
+                       ######################      #####                        
+                  ##################             ######                         
+             ##############                   ########                          
+         #########                          ##########                          
+     ######                                ###########                           
+ ####                                                                               
+                                                                                
+                                         ######         #         ###########    
+                                      ####     ##      ###         ###      #    
+                                     ###        #     #####        ###          
+                                    ####              # ###        ###   #      
+                                    ####             ##  ###       #######      
+                                    ####            #########      ###   #      
+                                     ####           ##    ####     ###          
+                                      #####   ###  ##       ###    ###      #    
+                                          ###     ##         ###  ###########           
+						    
+                                            Copyright 2012 CAE Engineering Kft.
+
+
