--- a/NEWS
+++ b/NEWS
@@ -1,6 +1,6 @@
  CAE SPlayer Plugin - Version History
    
-  1.0.0 - Initial Release
+  v1.0.0 - Initial Release
    5th of September, 2012
 
    - Released
