--- a/README
+++ b/README
@@ -2,22 +2,34 @@
 #     1. Introduction      #
 ############################
 
- Name: NOVP FFmpeg v1.4.0.8
- Description: FFmpeg fork from Splayer with frame accuracy options
+ Name: NOVP FFmpeg
+ Description: FFmpeg fork from Splayer with frame accuracy features
 
  Licensing          -> LICENSE
  
  To clone the repository with all the submodules use 
-   git clone --recursive git://github.com/bor0/NOVP_FFmpeg
+   git clone --recursive git://github.com/NOVP-Open-Source/NOVP_FFmpeg
 
- After cloning, make sure to apply FFmpeg.patch
+NOTE for Windows users:
+    lib.exe is required for creating .dll.a import stub libraries, so that you can link to the DLLs from MSVC (Microsoft Visual Studio compiler, bundled with it).
+    lib.exe is a Microsoft tool used for creating DLL files. It is bundled together with Visual Studio. Microsoft Visual Studio Express download is available for free. Once installed you'll need to add the directory where lib.exe is located to the system Path.
+    dlltool.exe (which is part of binutils) may be used instead of lib.exe. The downside in this case is that the import libraries break if you use the linker optimization option in MSVC (which is enabled by default). 
+
+    FFmpeg won't build unless you do:
+        git config --global core.autocrlf false
+        git reset --hard 
+        git checkout
+        git pull
 
 ############################
 #        2. Build          #
 ############################
 
+  First time build only: cd libffmpeg && make configuration && cd .. && cd FFmpeg && make && cd ..
   Build command: make -C libffmpeg
   NOTE for Windows users: You need to run this command through the MinGW shell.
+  NOTE for Mac users: If you are getting strange compiler errors,
+      manually edit the FFmpeg/config.mak file and remove all occurences of -O3 (this disables optimization)
 
 NOTE: To clean, run clean.sh
 NOTE: To force make, write "make -B -C libffmpeg"
@@ -28,7 +40,7 @@ NOTE: To force make, write "make -B -C libffmpeg"
 
  NOVP Team (http://www.novp.com/)
 
- CAE-Engineering team (http://www.cae-engineering.hu/):
+ CAE-Engineering team (http://www.cae-engineering.hu/)
  Máté Koch
  Attila Ötvös
  Tamás Szabó
